# semantix

./: .env.production.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  pyproject.toml
backend/app/: __init__.py  factory.py  lifecycle.py  main.py
backend/app/api/: __init__.py  auth.py  deps.py  health.py  router.py  schemas.py
backend/app/benchmark/: __init__.py  datasets.py  metrics.py  models.py  router.py  schemas.py  service.py
backend/app/cache/: __init__.py  database.py  factory.py  keys.py  memory.py  metadata.py  models.py  namespaces.py  protocols.py  router.py  schemas.py  service.py  vector_validation.py
backend/app/core/: __init__.py  config.py  exceptions.py  limits.py  logging.py  schemas.py
backend/app/embedding/: __init__.py  service.py
backend/app/middleware/: __init__.py  body_limit.py  client_address.py  rate_limit.py
backend/app/models/: benchmark.py  schemas.py
backend/app/observability/: __init__.py  metrics.py  router.py  schemas.py
backend/app/providers/: __init__.py  configuration.py  embedding.py  factory.py  huggingface.py  protocols.py  transport.py  urls.py  vectors.py
backend/app/query/: __init__.py  coalescing.py  normalization.py  policies.py  router.py  schemas.py  service.py
backend/app/security/: __init__.py  auth.py
backend/app/services/: benchmark_datasets.py  benchmark_metrics.py  benchmark_service.py  cache_backend.py  cache_service.py  embedding_service.py  huggingface_service.py
backend/scripts/: clean_artifacts.ps1  clean_artifacts.sh  enable_cache.ps1  enable_cache.sh  smoke_provider.py
backend/tests/: __init__.py  conftest.py  support.py  test_benchmark_metrics.py  test_benchmark_routes.py  test_cache_inspector.py  test_cache_service.py  test_embedding_service.py  test_huggingface_service.py  test_routes_query.py
backend/tests/api/: __init__.py  test_health.py
backend/tests/benchmark/: __init__.py  test_metrics.py  test_routes.py
backend/tests/cache/: __init__.py  test_database.py  test_inspector_routes.py  test_routes.py  test_service.py
backend/tests/embedding/: test_service.py
backend/tests/middleware/: test_body_limit.py  test_client_address.py
docs/: api.md  (+10 more)
(+324 files in other folders)
