[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-cache-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "asyncpg>=0.31,<0.32",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "numpy>=2,<2.5",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.6,<3",
  "python-dotenv>=1,<2",
  "slowapi>=0.1.9,<1",
  "symspellpy>=6.9,<7",
  "tenacity>=9,<10",
  "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
dev = [
  "asyncpg-stubs>=0.31,<0.32",
  "mypy>=1.13,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.15,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
namespaces = true

[tool.setuptools.package-data]
"app.cache.infrastructure.migrations" = ["*.sql"]

[tool.ruff]
cache-dir = ".cache/ruff"
extend-exclude = [".cache"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
cache_dir = ".cache/pytest"
markers = [
  "pgvector: requires a PostgreSQL database with the pgvector extension",
]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
files = ["app", "tests", "scripts"]
cache_dir = ".cache/mypy"

[[tool.mypy.overrides]]
module = ["slowapi", "slowapi.*", "symspellpy", "symspellpy.*"]
ignore_missing_imports = true
